Updated CSS to breakout into components

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./components/Body/index.css">
     <link rel="stylesheet" href="./components/Card1/index.css">
     <link rel="stylesheet" href="./components/Card2/index.css">
+    <link rel="stylesheet" href="./components/Card3/index.css">
     <link rel="stylesheet" href="./components/Footer/index.css">
     <link rel="stylesheet" href="./components/Hero/index.css">
     <link rel="stylesheet" href="./components/Nav/index.css">
@@ -84,9 +85,9 @@
         <div class="mdc-drawer-scrim"></div>
 
     <!-- Bootstrap Jumbotron --------------------------------------------------------------------------------------------------------------------------------------------->
-    <!-- <div class="jumbotron">
+    <div class="jumbotron">
         <h1 class="text-center"><strong>Mitchell</strong> Underwood</h1>
-    </div> -->
+    </div>
 
     <!-- Bootstrap/MDC Nav ----------------------------------------------------------------------------------------------------------------------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -95,8 +96,8 @@
                 <button id="toggler-btn" class="navbar-toggler mdc-button " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <h3 id="toggler-initials" class="text-center"><a><strong>M</strong>U</a></h3>
-                <h3 id="toggler-name" class="text-center"><a></q><strong>Mitchell</strong> Underwood</a></h3>
+                <!-- <h3 id="toggler-initials" class="text-center"><a><strong>M</strong>U</a></h3>
+                <h3 id="toggler-name" class="text-center"><a></q><strong>Mitchell</strong> Underwood</a></h3> -->
             </div>
             
             <div id="nav-center" class="inner d-flex justify-content-center align-items-center">
@@ -109,6 +110,126 @@
             </div>
         </div>
     </nav>
+    <!-- main container ----------------------------------------------------------------------------------------------------------------------------------------------->
+
+    <main role="main">
+      <div class="container">
+
+    <!-- album with newest article ------------------------------------------------------------------------------------------------------------------------------------->
+              <div class=" album pb-5">
+                  <div class="row">
+
+    <!-- main article card --------------------------------------------------------------------------------------------------------------------------------------------->
+                      <div class="col-md-12" id="main-article">
+                          <div class="card mb-1">
+
+                              <div class="card-img-container">
+                                  <img id="main-article-photo" class="bd-placeholder-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Baklava%281%29.png" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail">                                                                
+                                  </img>
+                              </div>
+
+                              <div class="card-body">
+                                  <h3>Title</h3>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <div class="d-flex justify-content-between align-items-center">
+                                      <small>Project</small>                                                                        
+                                      <small class="text-muted">11/12/20</small>
+                                  </div>
+                              </div>
+
+                          </div>
+                      </div>
+    <!----------------------------------------------------------------------------------------------------------------------------------------------->
+
+                  </div>
+              </div>
+    <!----------------------------------------------------------------------------------------------------------------------------------------------->
+
+
+    <!-- Blog Posts album header --------------------------------------------------------------------------------------------------------------------------------------->
+              <div class="album-header">
+                  <div class="album-header-body d-flex justify-content-between align-items-center">
+                      <h3 class="album-header-title">Posts</h3>
+                      <a class="album-header-more">MORE POSTS</a>
+                  </div> 
+              </div>
+    
+    <!-- Blog posts album --------------------------------------------------------------------------------------------------------------------------------------------->
+              <div class=" album pb-5">                                
+                  <div class="row">
+
+    <!-- Blog posts cards --------------------------------------------------------------------------------------------------------------------------------------------->
+                      <div class="col-md-6">
+                          <div class="card mb-1 mr-1">            
+                              <div class="card-img-container">
+                                  <img class="bd-placeholder-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Baklava%281%29.png" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail">
+                                  </img>
+                              </div>
+                              <div class="card-body">
+                                  <h3>Title</h3>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <div class="d-flex justify-content-between align-items-center">
+                                      <small>Project</small>                                                                        
+                                      <small class="text-muted">11/12/20</small>                                                               
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="card mb-1 mr-1">            
+                              <div class="card-img-container">
+                                  <img class="bd-placeholder-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Baklava%281%29.png" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail">
+                                  </img>
+                              </div>
+                              <div class="card-body">
+                                  <h3>Title</h3>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <div class="d-flex justify-content-between align-items-center">
+                                      <small>Project</small>                                                                        
+                                      <small class="text-muted">11/12/20</small>                                                               
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="card mb-1 mr-1">            
+                              <div class="card-img-container">
+                                  <img class="bd-placeholder-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Baklava%281%29.png" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail">
+                                  </img>
+                              </div>
+                              <div class="card-body">
+                                  <h3>Title</h3>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <div class="d-flex justify-content-between align-items-center">
+                                      <small>Project</small>                                                                        
+                                      <small class="text-muted">11/12/20</small>                                                               
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="card mb-1 mr-1">            
+                              <div class="card-img-container">
+                                  <img class="bd-placeholder-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Baklava%281%29.png" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail">
+                                  </img>
+                              </div>
+                              <div class="card-body">
+                                  <h3>Title</h3>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <div class="d-flex justify-content-between align-items-center">
+                                      <small>Project</small>                                                                        
+                                      <small class="text-muted">11/12/20</small>                                                               
+                                  </div>
+                              </div>
+                          </div>
+                      </div>   
+    <!----------------------------------------------------------------------------------------------------------------------------------------------->
+                  </div>
+              </div>
+    <!----------------------------------------------------------------------------------------------------------------------------------------------->          
+            </div>
+          </div>
+    <!----------------------------------------------------------------------------------------------------------------------------------------------->
 
     <!-- Bootstrap Footer ------------------------------------------------------------------------------------------------------------------------------------------------>
     <footer>
